--- a/www.conf
+++ b/www.conf
@@ -1,8 +1,10 @@
 [www]
 listen = /var/run/php-fpm/php-fpm.sock
-listen.allowed_clients = 127.0.0.1
 user = nginx
 group = nginx
+listen.owner = nginx
+listen.group = nginx
+listen.mode = 0660
 pm = dynamic
 pm.max_children = 50
 pm.start_servers = 5
